UI/src/stylesheet.scss
/* ... */
.breadcrumb {
    border: 1px solid rgba($secondary, .25);
    border-radius: var(--bs-border-radius);
}

@include color-mode(light) {

    .media-container {
        &:hover {
            .card {
                border: 1px solid rgba($black, 0.25);
                box-shadow: 0 .125rem .25rem rgba($black, .075);
            }
        }
    }

    .editable-text {
        &:hover {
            -webkit-box-shadow: inset 0px -3px 0px rgba($black, 0.1);
            -moz-box-shadow: inset 0px -3px 0px rgba($black, 0.1);
            box-shadow: inset 0px -3px 0px rgba($black, 0.1);

            .underline {
                background-color: rgba($black, 0.1);
            }
        }

        &.editing {

            .underline {
                background-color: rgba(#3498db, 1.0);
            }
        }
    }

    .sort-dropdown {

        &.overridden {
            .dropdown-toggle {
                color: black;
            }
        }
    }
}

@include color-mode(dark) {
    .breadcrumb {
        .breadcrumb-item {
            a {
                &:hover {
                    color: rgba($white, 0.7);
                }
            }
        }
    }

    .media-container {
        &:hover {
            .card {
                border: 1px solid rgba($white, 0.25);
                box-shadow: 0 .125rem .75rem rgba($white, 0.075);
            }
        }
    }

    .editable-text {

        &:hover {
            -webkit-box-shadow: inset 0px -3px 0px rgba($white, 0.1);
            -moz-box-shadow: inset 0px -3px 0px rgba($white, 0.1);
            box-shadow: inset 0px -3px 0px rgba($white, 0.1);

            .underline {
                background-color: rgba($black, 0.1);
            }
        }

        &.editing {

            .underline {
                background-color: rgba(#3498db, 1.0);
            }
        }
    }

    .sort-dropdown {

        &.overridden {
            .dropdown-toggle {
                color: white;
            }
        }
    }
}

@mixin flag-styles {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    text-shadow: 0 0 1px $black;
    font-style: normal;
    font-variant: normal;
    font-weight: normal;
    font-size: large;
    line-height: 1;
    margin-right: 5px;
    position: relative;
    cursor: pointer;
    display: none;
    opacity: .4;

    &.set {
        opacity: 1;
    }

    &:hover {
        opacity: 1;
    }

    &.favorite {
        opacity: 1;

        &.set {
            color: yellow;

            &:hover {
                color: white;
            }
        }

        &:hover {
            color: yellow;
        }
    }

    &.expand {
        display: unset;
        font-size: unset;
    }
}

.toolbar {

    .flag,
    .icon,
    .button {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        text-shadow: none;
        font-style: normal;
        font-variant: normal;
        font-weight: normal;
        font-size: x-large;
        position: relative;
        line-height: 1;
    }

    .flag,
    .icon {
        &:not(.set) {
            opacity: 0.3;
        }

        &.disabled {
            color: $btn-link-disabled-color;
            opacity: $btn-disabled-opacity;
        }
    }

    :disabled {

        .flag,
        .icon {
            opacity: $btn-disabled-opacity;
            color: $btn-link-disabled-color;
        }
    }
}

.media-viewer {

    .flags {
        top: 5px;
        left: 5px;
        right: 5px;
        position: absolute;
        vertical-align: middle;

        .flag {
            color: white;
        }
    }

    .flag {
        @include flag-styles;

        font-size: xx-large;
    }

    .modal-body:hover {
        .flag {
            display: unset;
        }
    }
}

// the padding between the grid items and when hovered
.grid-wrapper {
    .grid {
        overflow-x: hidden !important;
    }

    .grid-item {
        padding: 0.5rem;
        -webkit-transition: all .15s ease-out;
        -moz-transition: all .15s ease-out;
        transition: all .15s ease-out;
        --animate-duration: 0.5s;

        @media all and (hover: hover) {
            &:hover {
                transform: scale(1.015);
            }
        }
    }
}

.settings {

    .btn.apply,
    .btn.reset {
        min-width: 10rem;
    }

    .card {
        .card-text {
            i {
                font-size: x-large;
            }
        }
    }

    .periodic-scan-interval {

        .badge {
            font-size: $btn-font-size-sm;
            font-weight: $btn-font-weight;
            line-height: $btn-line-height;
            padding: $btn-padding-y-sm $btn-padding-x-sm;
            border: $btn-border-width solid transparent;
        }
    }
}

.upload-zone {
    label {
        .upload-zone-overlay.dragging {
            width: 100%;
            display: flex;
            position: absolute;
            border: 1px dashed;
            pointer-events: none;
            border-radius: .25rem;
            height: calc(100% - 1rem);
            z-index: $zindex-popover;
            background-color: rgba($body-bg, 0.45);
        }

        .upload-zone-content.dragging {
            opacity: .3;
        }
    }
}
/* ... */

